--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ As per federal rules outlined in the Federal Acquisition Regulation (FAR), speci
         }
 
         // Redirect to the next page without alert
-        window.location.href = "../dot/index2.html";
+        window.location.href = "../Mobius/index2.html";
     });
 </script>
 
