--- a/index2.html
+++ b/index2.html
@@ -124,10 +124,10 @@
     <div class="container-fluid header text-center py-4">
     <div class="row align-items-center">
         <div class="col-12 col-md-4">
-            <img src="../dot/Logo.svg" alt="U.S. Department of Transportation Logo" class="img-fluid logo">
+            <img src="Logo.svg" alt="U.S. Department of Transportation Logo" class="img-fluid logo">
         </div>
         <div class="col-12 col-md-8">
-            <h1 class="h3">Proposal Submission for Mobius Drones</h1>
+            <h1 class="h3">Infrastructure Revolution 2025: Join the Vision</h1>
             <p>From <strong>Pete Buttigieg's Office</strong> - U.S. Department of Transportation</p>
         </div>
     </div>
@@ -135,14 +135,14 @@
 
     <div class="container">
         <!-- This section is for the successful submission message -->
-        <h2>Your Proposal Has Been Successfully Submitted</h2>
-        <p>Thank you for submitting your proposal to the U.S. Department of Transportation regarding drone services to be provided by Mobius Drones. This submission will be processed in alignment with federal guidelines and operational timelines. As part of the transition to the new administration, your proposal will be reviewed for potential implementation beginning in January, following the inauguration of President Donald J. Trump upon his assumption of office as the President of the United States of America. We appreciate your interest in collaborating with the U.S. government and contributing to innovative advancements in transportation technology.</p>
+        <h2>Proposal Submitted Successfully!</h2>
+        <p>Your proposal has been successfully submitted to the U.S. Department of Transportation for Infrastructure Revolution 2025 by Trump's Administration. Thank you for your interest in collaborating with us!</p>
         <p>Our team will review your submission and get in touch with you shortly.</p>
         
         <!-- About Me section -->
       <div class="about-me">
             <h2>About Me</h2>
-          <img src="../dot/pete.png" alt="Your Photo">
+          <img src="pete.png" alt="Your Photo">
           <p>Hi, I’m Pete Buttigieg, the United States Secretary of Transportation. Since February 3, 2021, I’ve had the honor of leading the Department of Transportation, where I work every day to make transportation safer, more efficient, and accessible for everyone in our country. From modernizing our infrastructure to tackling climate change through innovative, sustainable solutions, my mission is to help shape a transportation system that meets the demands of the 21st century. I’m passionate about leveraging the transformative power of transportation to connect communities, create jobs, and build a better future for all. Before stepping into this role, I served as the Mayor of South Bend, Indiana, where I focused on revitalizing the city’s economy and updating critical infrastructure. These experiences taught me the value of resilience, innovation, and putting people first. Fun fact: I’m also a Navy veteran, a Harvard graduate, a Rhodes Scholar, and an unapologetic transportation enthusiast.</p>
         </div>
     </div>
